[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cuspidal"
version = "0.0.1"
authors = [
  { name="Achille", email="achille.verheye@gmail.com" },
]
description = "Researching Cuspidal manipulators"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib>=3.5.3",
    "mayavi>=4.8.0",
    "numpy==1.23.1",
    "PyQt5==5.15.7",
    "sympy==1.10.1",
    "scikit-image==0.19.3"
]

[project.urls]
"Homepage" = "https://github.com/Achllle/cuspidal"
"Bug Tracker" = "https://github.com/Achllle/cuspidal/issues"